Initial reverse index implementation
